--- a/styles.css
+++ b/styles.css
@@ -108,3 +108,34 @@ a:hover {
     margin: 0 1rem;
     font-size: 1.5rem;
 }
+
+.projects-box {
+    position: fixed;
+    width: 60%;
+    height: 60%;
+    top: 20%;
+    left: 20%;
+    background: rgba(0, 0, 0, 0.8);
+    text-align: left;
+    padding: 0 1rem;
+    box-sizing: border-box;
+    box-shadow: 0 0.25rem 5rem rgba(0, 0, 0, 0.6);
+}
+
+.projects-box h2 {
+    margin-bottom: 0.1rem;
+}
+
+.projects-box p {
+    margin-top: 0.1rem;
+}
+
+.close-button {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+}
+
+.close-button:hover {
+    text-decoration: none;
+}
