--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,28 +2,14 @@
 layout: base
 ---
 
-<header class="post">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-10">
-        <a href="/"><span class="icon ion-ios-home"></span></a>
-      </div>
-
-      <div class="col-sm-2">
-        <a href="https://github.com/thomasleese"><span class="icon ion-social-github"></span></a>
-        <a href="https://twitter.com/tomleese"><span class="icon ion-social-twitter"></span></a>
-        <a href="mailto:inbox@thomasleese.me"><span class="icon ion-email"></span></a>
-      </div>
-    </div>
-  </div>
+<header>
+  <h1><a href="/">Back to Home</a></h1>
 </header>
 
-<main class="container">
-  <section>
-    <article>
-      <h1>{{ page.title }}</h1>
+<main>
+  <article>
+    <h1>{{ page.title }}</h1>
 
-      {{ page.content }}
-    </article>
-  </section>
+    {{ page.content }}
+  </article>
 </main>
