--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,11 +8,9 @@
 
     <title>{{ site.title }}</title>
 
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" />
+    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Open+Sans:300,400,600" />
 
-    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Raleway:200" />
-
+    <link href="/styles/normalize.css" rel="stylesheet" />
     <link href="/styles/theme.css" rel="stylesheet" />
 
     <link rel="icon" href="/images/icon.png" />
@@ -20,12 +18,6 @@
 
   <body>
     {{ content }}
-
-    <footer class="container">
-      &copy; 2016 Thomas Leese
-    </footer>
-
-    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
