--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1,127 +1,83 @@
-header {
-    font-family: 'Raleway', sans-serif;
-    background: rgb(20, 20, 20);
-    color: white;
-    text-transform: uppercase;
+body {
+    width: 90%;
+    margin: auto;
+
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 1em;
+    line-height: 1.5;
+
+    font-feature-settings: 'kern';
+    -moz-font-feature-settings: 'kern';
+    -webkit-font-feature-settings: 'kern';
 }
 
-header a {
-    color: rgb(230, 230, 230);
+@media (min-width: 600px) {
+    body {
+        width: 70%;
+    }
 }
 
-header a:hover {
-    color: white;
+@media (min-width: 1000px) {
+    body {
+        width: 60%;
+    }
+}
+
+a {
     text-decoration: none;
 }
 
-header .icon {
-    font-size: 1.4rem;
-    margin: 0 .4rem;
+a:hover {
+    text-decoration: underline;
 }
 
-header.post {
-    background-image: url('../images/IMG_20141230_094336.jpg');
-    background-size: cover;
+.bulletless {
+    padding-left: 0;
+}
+
+.bulletless li {
+    list-style: none;
+}
+
+header h1 {
+    font-weight: 300;
+    font-size: 2.5rem;
+}
+
+section h1 {
+    margin-top: 0;
+    font-weight: 400;
+}
+
+header, section, footer, article {
     padding: 2rem 0;
 }
 
-header.post .icon {
-    font-size: 2rem;
+section, footer, article {
+    border-top: 1px solid rgb(230, 230, 230);
 }
 
-header.frontpage {
-    margin-bottom: 6rem;
+section li {
+    color: grey;
 }
 
-header.frontpage #header-overlay {
-    background: rgb(20, 20, 20);
-    background-image: url('../images/IMG_20141230_094336.jpg');
-    background-size: cover;
-    height: 100vh;
-    width: 100%;
-    opacity: 0;
-
-    animation-name: fade-in-slightly;
-    animation-duration: 5s;
-    animation-delay: 1s;
-    animation-fill-mode: forwards;
+section li a {
+    font-weight: 400;
 }
 
-@keyframes fade-in-slightly {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: .5;
-    }
+#projects li a {
+    color: #2980b9;
 }
 
-header.frontpage #header-logo {
-    display: block;
-    width: 400px;
-    height: 200px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -200px;
-    margin-top: -100px;
-
-    text-align: center;
-    color: white;
-    font-family: 'Raleway', sans-serif;
-
-    animation-name: fade-in;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-}
-
-header.frontpage #header-logo h1 {
-    font-size: 3.2rem;
-}
-
-header.frontpage #header-logo h2 {
-    text-transform: lowercase;
-    font-size: 1.6rem;
-    margin-bottom: 2rem;
-}
-
-header.frontpage #header-logo > a {
-    transition: color .1s;
-}
-
-header.frontpage #header-more {
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    margin-left: -6px;
-
-    color: white;
-
-    animation-name: fade-in;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-}
-
-@keyframes fade-in {
-    0% {
-        opacity: 0;
-    }
-
-    100% {
-        opacity: 1;
-    }
-}
-
-section {
-    margin: 3rem 0;
+#posts li a {
+    color: #d35400;
 }
 
 footer {
-    color: rgb(200, 200, 200);
-    margin: 1rem 0;
+    text-align: center;
 }
 
-.card img {
-    width: 100%;
+footer a {
+    color: grey;
 }
