--- a/styles/theme.css
+++ b/styles/theme.css
@@ -42,6 +42,10 @@ a:hover {
     list-style: none;
 }
 
+.lead {
+    font-size: 1.5rem;
+}
+
 header h1 {
     font-weight: 300;
     font-size: 2.5rem;
