--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>{{ site.title }}</title>
+    <title>Thomas Leese</title>
 
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Open+Sans:300,400,600" />
 
@@ -24,11 +24,9 @@
       <div class="container header-container">
         <a href="/" class="header-brand">Thomas Leese</a>
 
-        <nav class="header-nav">
-          <ul>
-            <li><a href="/">Home</a></li>
-          </ul>
-        </nav>
+        <ul class="header-nav">
+          <li><a href="/">Home</a></li>
+        </ul>
       </div>
 
       <div class="header-bar bg-colour2"></div>
@@ -43,7 +41,18 @@
     </main>
 
     <footer class="container">
-      <a href="mailto:{{ site.email }}"><strong>thomas</strong>@leese.io</a>
+      <ul class="footer-nav">
+        {% for social in site.data.socials %}
+          <li>
+            <a rel="me external" href="{{ social.url }}">
+              <svg width="24" height="24" focusable="false" aria-hidden="true">
+                <use href="/images/icons.svg#{{ social.icon }}"></use>
+              </svg>
+              <span>{{ social.name }}</span>
+            </a>
+          </li>
+        {% endfor %}
+      </ul>
     </footer>
   </body>
 </html>
