--- a/styles/main.css
+++ b/styles/main.css
@@ -28,20 +28,16 @@ a:hover {
     margin: 9px 0;
 }
 
-.lead {
-    font-size: 1.5rem;
-}
-
 section h1 {
     margin-top: 0;
     font-weight: 400;
 }
 
-section, footer, article {
+section, article {
     padding: 2rem 0;
 }
 
-section, footer, article {
+section, article {
     border-top: 1px solid rgb(230, 230, 230);
 }
 
