--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,10 +8,13 @@
 
     <title>Thomas Leese</title>
 
-    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Open+Sans:300,400,600" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet" />
 
     <link href="/styles/normalize.css" rel="stylesheet" />
     <link href="/styles/colours.css" rel="stylesheet" />
+    <link href="/styles/fonts.css" rel="stylesheet" />
     <link href="/styles/header.css" rel="stylesheet" />
     <link href="/styles/main.css" rel="stylesheet" />
     <link href="/styles/footer.css" rel="stylesheet" />
@@ -22,7 +25,7 @@
   <body>
     <header class="header">
       <div class="container header-container">
-        <a href="/" class="header-brand">Thomas Leese</a>
+        <span class="header-brand">Thomas Leese</span>
 
         <ul class="header-nav">
           <li><a href="/">Home</a></li>
