--- a/styles/main.css
+++ b/styles/main.css
@@ -1,20 +1,3 @@
-body {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 300;
-    font-size: 1em;
-    line-height: 1.5;
-}
-
-a {
-    text-decoration: none;
-    font-weight: 400;
-    color: var(--colour6);
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
 .bulletless {
     padding-left: 0;
 }
@@ -29,11 +12,8 @@ section h1 {
     font-weight: 400;
 }
 
-section, article {
+section {
     padding: 2rem 0;
-}
-
-section, article {
     border-top: 1px solid rgb(230, 230, 230);
 }
 
