--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -16,7 +16,7 @@
     <link href="/styles/colours.css" rel="stylesheet" />
     <link href="/styles/fonts.css" rel="stylesheet" />
     <link href="/styles/header.css" rel="stylesheet" />
-    <link href="/styles/main.css" rel="stylesheet" />
+    <link href="/styles/cards.css" rel="stylesheet" />
     <link href="/styles/footer.css" rel="stylesheet" />
 
     <link rel="icon" href="/images/icon.png" />
@@ -44,6 +44,8 @@
     </main>
 
     <footer class="container">
+      <hr class="footer-line" />
+
       <ul class="footer-nav">
         {% for social in site.data.socials %}
           <li>
